--- a/index.html
+++ b/index.html
@@ -3,62 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<link rel="stylesheet" type="text/css" href="style.css">-->
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
     <title>Nicolas Alici - Game Developer</title>
 </head>
 <body>
-    <div class="Main_Title">
-        <h1>
-            Hello!
-            <div class="Mini_Presentation">
-                Im Nicolas Alici, Future Game Developer and this are my projects
+    <header>
+        <div class="main_Title">
+            <h1>Hello!</h1>
+            <div class="mini_Presentation">
+                <p> Nicolas Alici, Future Game Developer and this are my projects </p>
             </div> 
-        </h1>
-    </div>
-    <div class="Presentation">
-        <h2 class="Presentation_Title">About Me</h2>
-        <p>
-            Hola! Me llamo Nicolas Alici y soy un entusiasta de los videojuegos que actualmente estudia la carrera "Licenciatura en Desarrollo de Videojuegos" en la Universidad Argentina de la Empresa (UADE). 
-            Mi principal foco dentro de la industria de videojuegos es el Game Design, teniendo mayor intereses en el area de System Design.
-            Secundariamente me gusta el área de programación gracias a que mayoria de ideas que tengo me gusta reflejarlas directamente  en código y así tener un test rápido de la idea. 
-            Aparte de la programación de videojuegos, actualmente estoy aprendiendo el desarrollo web (Front End) para tener un conocimiento por fuera de los videojuegos.
-        </p>
-    </div>
-    <div class="Links">
-        <a href="https://www.linkedin.com/in/nicolas-alici/"> Linkedin</a>
-        <a href="https://github.com/NicolasAlici"> GitHub</a>
-        <a href="https://daltonikho.itch.io/"> Itch.io</a>
-    </div>
-    <div class="Projects_Title">
-        <h2>My Projects</h2>
-        <p></p>
-    </div>
-    <div class="Game_Projects">
-        <h2 class="Game_Projects_Title"> Game Projects</h2>
-        <div class="Project1">
-            <h3> Slime It!</h3>
-            <p>A remaster of my first game made with two more friends and still in develop. With this game i learn the basic of Unity Coding</p>
-            <p>Role: Programmer & Game Design</p>
-            <a href="https://daltonikho.itch.io/slime-it"> Link to the Game</a>
         </div>
-        <div class="Project2">
-            <h3>Expediente #074: Carrie</h3>
-            <p>Visual Novel made for my Script and Narrative class. This game is a reimagination about the horror film "Carrie"</p>
-            <p>Role: Game Designer</p>
-            <a href="https://santino-baldan.itch.io/expediente-074-carrie"> Link to the Game</a>
-        </div>
-        <div class="Project3">
-            <h3>The Blindess</h3>
-            <p>2D puzzle game about a blind human and his best friend, a deaf dog. </p>
-            <p>Role: Game Producer & QA</p>
-            <a href="https://juanyfanga.itch.io/the-blindness"> Link to the Game</a>
-        </div>
-        <div class="Project4">
-            <h3>Dynamic Feline</h3>
-            <p>Game made for my System Design class, where i increased my knowleadge about this specific area of Design.</p>
-            <p>Role: Game Designer & System Designer</p>
-            <a href="https://facucancela.itch.io/dynamic-feline"> Link to the Game</a>
-        </div>
-    </div>
+    </header>
+    <main>
+        <article>
+            <section id="presentation">
+                <div class="full_presentation">
+                    <div class="presentation_Title">
+                        <h2>About Me</h2>
+                    </div>
+                    <div class="presentation_info">
+                        <p>
+                            Hola! Me llamo Nicolas Alici y soy un entusiasta de los videojuegos que actualmente estudia la carrera "Licenciatura en Desarrollo de Videojuegos" en la Universidad Argentina de la Empresa (UADE). 
+                            Mi principal foco dentro de la industria de videojuegos es el Game Design, teniendo mayor intereses en el area de System Design.
+                            Secundariamente me gusta el área de programación gracias a que mayoria de ideas que tengo me gusta reflejarlas directamente  en código y así tener un test rápido de la idea. 
+                            Aparte de la programación de videojuegos, actualmente estoy aprendiendo el desarrollo web (Front End) para tener un conocimiento por fuera de los videojuegos.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </article>
+        <section id="contanct_links">
+            <div class="contact_title">
+                <h2>Contact me!</h2>
+            </div>
+            <div class="links">
+                <a href="https://www.linkedin.com/in/nicolas-alici/"> Linkedin</a>
+                <a href="https://github.com/NicolasAlici"> GitHub</a>
+                <a href="https://daltonikho.itch.io/"> Itch.io</a>
+            </div>
+        </section>
+        <section id="projects">
+            <div class="projects_Title">
+                <h2>My Projects</h2>
+            </div>
+            <div class="projects_info">
+                <p>Here you can see all the game and web projects i made throughout the time!</p>
+            </div>
+        </section>
+        <section>
+            <div class="game_projects">
+                <div class="game_projects_title">
+                    <h2> Game Projects</h2>
+                </div>
+                <div class="projects_info">
+                    <div class="project1">
+                        <div class="project1_title">
+                            <h3> Slime It!</h3>
+                        </div>
+                        <div class="project1_info">
+                            <p>A remaster of my first game made with two more friends and still in develop. With this game i learn the basic of Unity Coding</p>
+                            <p>Role: Programmer & Game Design</p>
+                            <a href="https://daltonikho.itch.io/slime-it"> Link to the Game</a>
+                        </div>
+                    </div>
+                    <div class="project2">
+                        <div class="project2_title">
+                            <h3>Expediente #074: Carrie</h3>
+                        </div>
+                        <div class="project2_info">
+                            <p>Visual Novel made for my Script and Narrative class. This game is a reimagination about the horror film "Carrie"</p>
+                            <p>Role: Game Designer</p>
+                            <a href="https://santino-baldan.itch.io/expediente-074-carrie"> Link to the Game</a>
+                        </div>
+                    </div>
+                    <div class="project3">
+                        <div class="project3_title">
+                            <h3>The Blindess</h3>
+                        </div>
+                        <div class="project3_info">
+                            <p>2D puzzle game about a blind human and his best friend, a deaf dog. </p>
+                            <p>Role: Game Producer & QA</p>
+                            <a href="https://juanyfanga.itch.io/the-blindness"> Link to the Game</a>
+                        </div>
+                    </div>
+                    <div class="project4">
+                        <div class="project4_title">
+                            <h3>Dynamic Feline</h3>
+                        </div>
+                        <div class="project4_info">
+                            <p>Game made for my System Design class, where i increased my knowleadge about this specific area of Design.</p>
+                            <p>Role: Game Designer & System Designer</p>
+                            <a href="https://facucancela.itch.io/dynamic-feline"> Link to the Game</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
