--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Nicolas Alici - Game Developer</title>
 </head>
 <body>
+    <nav>
+        <a href="#presentation">About me</a>
+        <a href="#contanct_links"> Contact me</a>
+        <a href="#projects">Projects</a>
+    </nav>
     <header>
         <div class="main_Title">
             <h1>Hello!</h1>
             <div class="mini_Presentation">
-                <p> Nicolas Alici, Future Game Developer and this are my projects </p>
+                <p>I'm Nicolas Alici, future <strong class="mp_b">Game Developer</strong> and welcome to my portfolio! </p>
             </div> 
         </div>
     </header>
@@ -19,7 +24,7 @@
         <article>
             <section id="presentation">
                 <div class="full_presentation">
-                    <div class="presentation_Title">
+                    <div class="presentation_title">
                         <h2>About Me</h2>
                     </div>
                     <div class="presentation_info">
@@ -32,74 +37,76 @@
                     </div>
                 </div>
             </section>
-        </article>
-        <section id="contanct_links">
-            <div class="contact_title">
-                <h2>Contact me!</h2>
-            </div>
-            <div class="links">
-                <a href="https://www.linkedin.com/in/nicolas-alici/"> Linkedin</a>
-                <a href="https://github.com/NicolasAlici"> GitHub</a>
-                <a href="https://daltonikho.itch.io/"> Itch.io</a>
-            </div>
-        </section>
-        <section id="projects">
-            <div class="projects_Title">
-                <h2>My Projects</h2>
-            </div>
-            <div class="projects_info">
-                <p>Here you can see all the game and web projects i made throughout the time!</p>
-            </div>
-        </section>
-        <section>
-            <div class="game_projects">
-                <div class="game_projects_title">
-                    <h2> Game Projects</h2>
+            <section id="contanct_links">
+                <div class="contact_title">
+                    <h2>Contacts</h2>
+                </div>
+                <div class="links">
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/nicolas-alici/"> Linkedin</a></li>
+                        <li><a href="https://github.com/NicolasAlici"> GitHub</a></li>
+                        <li><a href="https://daltonikho.itch.io/"> Itch.io</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section id="projects">
+                <div class="projects_Title">
+                    <h2>My Projects</h2>
                 </div>
                 <div class="projects_info">
-                    <div class="project1">
-                        <div class="project1_title">
-                            <h3> Slime It!</h3>
-                        </div>
-                        <div class="project1_info">
-                            <p>A remaster of my first game made with two more friends and still in develop. With this game i learn the basic of Unity Coding</p>
-                            <p>Role: Programmer & Game Design</p>
-                            <a href="https://daltonikho.itch.io/slime-it"> Link to the Game</a>
-                        </div>
+                    <p>Here you can see all the game and web projects i made throughout the time!</p>
+                </div>
+            </section>
+            <section>
+                <div class="game_projects">
+                    <div class="game_projects_title">
+                        <h2> Game Projects</h2>
                     </div>
-                    <div class="project2">
-                        <div class="project2_title">
-                            <h3>Expediente #074: Carrie</h3>
+                    <div class="projects_info">
+                        <div class="project1">
+                            <div class="project1_title">
+                                <h3> Slime It!</h3>
+                            </div>
+                            <div class="project1_info">
+                                <p>A remaster of my first game made with two more friends and still in develop. With this game i learn the basic of Unity Coding</p>
+                                <p>Role: Programmer & Game Design</p>
+                                <a href="https://daltonikho.itch.io/slime-it"> Link to the Game</a>
+                            </div>
                         </div>
-                        <div class="project2_info">
-                            <p>Visual Novel made for my Script and Narrative class. This game is a reimagination about the horror film "Carrie"</p>
-                            <p>Role: Game Designer</p>
-                            <a href="https://santino-baldan.itch.io/expediente-074-carrie"> Link to the Game</a>
+                        <div class="project2">
+                            <div class="project2_title">
+                                <h3>Expediente #074: Carrie</h3>
+                            </div>
+                            <div class="project2_info">
+                                <p>Visual Novel made for my Script and Narrative class. This game is a reimagination about the horror film "Carrie"</p>
+                                <p>Role: Game Designer</p>
+                                <a href="https://santino-baldan.itch.io/expediente-074-carrie"> Link to the Game</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="project3">
-                        <div class="project3_title">
-                            <h3>The Blindess</h3>
+                        <div class="project3">
+                            <div class="project3_title">
+                                <h3>The Blindess</h3>
+                            </div>
+                            <div class="project3_info">
+                                <p>2D puzzle game about a blind human and his best friend, a deaf dog. </p>
+                                <p>Role: Game Producer & QA</p>
+                                <a href="https://juanyfanga.itch.io/the-blindness"> Link to the Game</a>
+                            </div>
                         </div>
-                        <div class="project3_info">
-                            <p>2D puzzle game about a blind human and his best friend, a deaf dog. </p>
-                            <p>Role: Game Producer & QA</p>
-                            <a href="https://juanyfanga.itch.io/the-blindness"> Link to the Game</a>
-                        </div>
-                    </div>
-                    <div class="project4">
-                        <div class="project4_title">
-                            <h3>Dynamic Feline</h3>
-                        </div>
-                        <div class="project4_info">
-                            <p>Game made for my System Design class, where i increased my knowleadge about this specific area of Design.</p>
-                            <p>Role: Game Designer & System Designer</p>
-                            <a href="https://facucancela.itch.io/dynamic-feline"> Link to the Game</a>
+                        <div class="project4">
+                            <div class="project4_title">
+                                <h3>Dynamic Feline</h3>
+                            </div>
+                            <div class="project4_info">
+                                <p>Game made for my System Design class, where i increased my knowleadge about this specific area of Design.</p>
+                                <p>Role: Game Designer & System Designer</p>
+                                <a href="https://facucancela.itch.io/dynamic-feline"> Link to the Game</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </article>
     </main>
 </body>
 </html>
